# sword-tui

./: .gitignore  PLAN-XREFS-BOOKMARKS.md  README.md  SUGGESTIES.md  flake.nix  pyproject.toml
desktop/: sword-tui.desktop
sword_tui/: __init__.py  __main__.py  app.py  config.py  jumplist.py  tab_state.py  verselist.py
sword_tui/backend/: __init__.py  commentary.py  crossref.py  diatheke.py  dictionary.py  modules.py
sword_tui/commands/: __init__.py  handlers.py  parser.py
sword_tui/data/: __init__.py  aliases.py  canon.py  types.py
sword_tui/styles/: app.tcss
sword_tui/widgets/: __init__.py  bible_view.py  book_picker.py  command_input.py  commentary_picker.py  crossref_view.py  dict_module_picker.py  jumplist_view.py  kwic_list.py  module_picker.py  parallel_view.py  search_view.py  status_bar.py  strongs_view.py  study_view.py  tab_bar.py  verselist_view.py
tests/: __init__.py  test_backend.py  test_canon.py  test_commands.py  test_tabs.py
