[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sword-tui"
version = "0.1.0"
description = "A Bible TUI application using SWORD/diatheke backend"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "sword-tui contributors" }
]
keywords = ["bible", "sword", "tui", "textual", "diatheke"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Religion",
]
dependencies = [
    "textual>=0.47.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
sword-tui = "sword_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["sword_tui"]
